# teh-o-video-analytics

./: .gitignore  pyproject.toml  requirements.txt
src/: __analyzer.py  _analyzer.py  analyzer.py  app.py  processor.py
